--- a/animationMappe/animation.html
+++ b/animationMappe/animation.html
@@ -61,7 +61,7 @@
     <script src="../menu.js"></script>
     <main>
         <div class="background_div">
-            <h2>Intro</h2>
+            <h2>Grundlæggende Animation</h2>
             <div>
                 <p>I dette tema skulle jeg lære at udvikle mit eget simple spil fra bunden ved hjælp af HTML, CSS og
                     JavaScript. Man skulle designe
