--- a/indexMappe/index.html
+++ b/indexMappe/index.html
@@ -35,7 +35,7 @@
     <header>
         <div class="logo">
             <a href="../indexMappe/index.html">
-                <img src="../imgs/logo.png" alt="Logo">
+                <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
             </a>
         </div>
         <nav>
@@ -73,8 +73,11 @@
                     </h2>
                 </div>
                 <div id="header_img">
-                    <h2>BUTTON</h2>
-                    <!--<a href=""></a>-->
+                    <a href="#box1">
+                        <div class="innerBox">
+                            <h2>Om mig</h2>
+                        </div>
+                    </a>
                 </div>
 
 
@@ -178,7 +181,7 @@
         </div>
     </footer>
 
-
+    <script src="../login.js"></script>
 </body>
 
 </html>
