--- a/indholdMappe/indhold.html
+++ b/indholdMappe/indhold.html
@@ -61,68 +61,56 @@
     <script src="../menu.js"></script>
     <main>
         <div class="background_div">
-            <h2>Lorem ipsum</h2>
+            <h2>Passionsite og Virksomhedsite</h2>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellend</p>
+                <p>Den første del af temaet handlede om at skabe et website for en person med en passion. Vi arbejdede
+                    tæt sammen med dem
+                    for at forstå deres vision og gjorde deres drømmeside til en realitet.</p>
             </div>
             <div class="grid3_1-1">
                 <div id="backdropBox">
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/indholdImgs/passionsitOv.webp" alt="figma pic">
                 </div>
                 <div id="pBackdrop">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellend</p>
+                    <a href="https://solomonmade.dk/kea/05_indhold/passion_website/">Passionsite</a>
                 </div>
             </div>
 
             <div>
-                <img src="../imgs/placehodler1.png" alt="figma pic">
+                <img src="../imgs/indholdImgs/hifiwireKonsu.webp" alt="figma pic">
             </div>
 
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellendus necessitatibus.
-                    Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere. Cupiditate
+                <p>I anden del af temaet fokuserede vi på at redesigne og optimere et virksomhedswebsite. VI brugte al
+                    den viden, vi
+                    havde opbygget gennem semesteret, til at skabe en moderne og brugervenlig løsning.
                 </p>
             </div>
 
-            <h2>lorem ipsum</h2>
+            <h2>Proces</h2>
 
             <div class="grid1_1-2-1">
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/indholdImgs/styletilekonsul.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>Vi analyseret virksomhedens eksisterende hjemside, og opdateret deres farver og toner, i et
+                        samlet moodboard.
                     </p>
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/indholdImgs/gitPic.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>Samarbejdet var i fokus i denne fase, hvor vi brugte GitHub til versionsstyring og teamwork. Det
+                        var første gang, vi
+                        arbejdede med GitHub, og vi lærte, hvordan man effektivt håndterer samarbejdsprojekter.
                     </p>
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/indholdImgs/trello.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>Vi brugte også sarmarbejsværktøjer som trello til at holde styr på workflow.
                     </p>
                 </div>
             </div>
@@ -139,13 +127,15 @@
 
             <div class="grid4_1-1">
                 <div id="endDivpic">
-                    <img src="../imgs/placehodler1.png" alt="pic1">
+                    <img src="../imgs/indholdImgs/bookbord.webp" alt="pic1">
+
+                    <a href="https://solomonmade.dk/kea/05_indhold/virksomhedssite/index.html">Virksomhedsite</a>
                 </div>
 
                 <div id="endDivtxt">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellend</p>
+                    <p>Jeg lærte vigtigheden af god kommunikation og rollefordeling i teamet. Vi brugte
+                        planlægningsværktøjer og regelmæssige
+                        feedback-sessioner til at holde projektet på sporet."</p>
                 </div>
             </div>
         </div>
