--- a/om_migMappe/om.html
+++ b/om_migMappe/om.html
@@ -61,94 +61,62 @@
     <script src="../menu.js"></script>
     <main>
         <div class="background_div">
-            <h2>Lorem ipsum</h2>
+            <h2>Om mig</h2>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellend</p>
+                <p>Her er lidt kort om mig, og hvad jeg kan tilbyde til et design/software team</p>
             </div>
             <div class="grid3_1-1">
                 <div id="backdropBox">
                     <img src="../imgs/placehodler1.png" alt="figma pic">
                 </div>
                 <div id="pBackdrop">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellend</p>
-                </div>
-            </div>
-
-            <div>
-                <img src="../imgs/placehodler1.png" alt="figma pic">
-            </div>
-
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellendus necessitatibus.
-                    Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere. Cupiditate
-                </p>
-            </div>
-
-            <h2>lorem ipsum</h2>
-
-            <div class="grid1_1-2-1">
-                <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
-                    </p>
-                </div>
-
-                <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
-                    </p>
-                </div>
-
-                <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
-                    </p>
+                    <p>Jeg er 22 år gammel og begyndte at kode for nylig. Jeg gik på cph-business under
+                        datamatiker-kurset i 3 semestre, indtil
+                        jeg følte, at jeg havde brug for lidt mere "Design" i min fremtid. Sådan endte jeg på KEA som
+                        multimediedesignstuderende.</p>
                 </div>
             </div>
 
         </div>
 
-        <div class="background_div2">
-            <h2>Lorem ipsum</h2>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellend</p>
-            </div>
-
-            <div class="grid4_1-1">
-                <div id="endDivpic">
-                    <img src="../imgs/placehodler1.png" alt="pic1">
-                </div>
-
-                <div id="endDivtxt">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellend</p>
-                </div>
-            </div>
+        <div class="about-me">
+            <h2>CV (eng)</h2>
+            <p>
+                I am a passionate and detail-oriented multimedia design student with hands-on experience in creating
+                responsive websites, interactive designs, and animations. My skills include:
+            </p>
+            <ul>
+                <li>
+                    <strong>Web Development:</strong> Proficient in HTML, CSS, and JavaScript, with experience in
+                    frameworks like Flexbox, CSS Grid, and responsive design principles.
+                </li>
+                <li>
+                    <strong>Design Tools:</strong> Skilled in Figma for prototyping, Adobe Illustrator for graphics,
+                    and Premiere Pro for video editing and integration into web projects.
+                </li>
+                <li>
+                    <strong>User Experience (UX/UI):</strong> Strong understanding of wireframing, mockups, user
+                    testing, and iterative design processes, ensuring optimal user satisfaction.
+                </li>
+                <li>
+                    <strong>Teamwork & Collaboration:</strong> Experienced in working with GitHub for version
+                    control
+                    and collaborative teamwork on projects, with an emphasis on clear communication and task
+                    management.
+                </li>
+                <li>
+                    <strong>Organized & Goal-Oriented:</strong> Adept at managing projects from concept to
+                    completion,
+                    using tools and methods like activity diagrams, structured workflows, and feedback incorporation
+                    to deliver professional results.
+                </li>
+            </ul>
+            <p>
+                I thrive in dynamic environments and am eager to apply my technical and creative skills to impactful
+                projects.
+            </p>
         </div>
+
     </main>
 
     <footer>
