--- a/webMappe/web.html
+++ b/webMappe/web.html
@@ -61,7 +61,7 @@
     <script src="../menu.js"></script>
     <main>
         <div class="background_div">
-            <h2>Intro</h2>
+            <h2>Web</h2>
             <div>
                 <p>Dette projekt markerede begyndelsen på min webdesignrejse, hvor jeg lavede en responsiv hjemmeside
                     ved hjælp af HTML og
