--- a/indexMappe/index.html
+++ b/indexMappe/index.html
@@ -181,7 +181,7 @@
         </div>
     </footer>
 
-    <script src="../login.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
