--- a/indholdMappe/indhold.html
+++ b/indholdMappe/indhold.html
@@ -118,11 +118,9 @@
         </div>
 
         <div class="background_div2">
-            <h2>Lorem ipsum</h2>
+            <h2>Virksomhedsite</h2>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellend</p>
+                <p>Her ned er linket til vores færdiglavet virksomhedsite.</p>
             </div>
 
             <div class="grid4_1-1">
